@@ -66,9 +66,13 @@ void SV_Init (void)
 	Cvar_RegisterVariable (&sv_maxvelocity);
 	Cvar_RegisterVariable (&sv_gravity);
 	Cvar_RegisterVariable (&sv_friction);
+	Cvar_SetCallback (&sv_gravity, Host_Callback_Notify);
+	Cvar_SetCallback (&sv_friction, Host_Callback_Notify);
 	Cvar_RegisterVariable (&sv_edgefriction);
 	Cvar_RegisterVariable (&sv_stopspeed);
 	Cvar_RegisterVariable (&sv_maxspeed);
+	Cvar_SetCallback (&sv_stopspeed, Host_Callback_Notify);
+	Cvar_SetCallback (&sv_maxspeed, Host_Callback_Notify);
 	Cvar_RegisterVariable (&sv_accelerate);
 	Cvar_RegisterVariable (&sv_idealpitchscale);
 	Cvar_RegisterVariable (&sv_idealrollscale);
